# gliner-it-job-skills-ner

./: .gitignore  README.md  app.py  eval_model.py  pyproject.toml  requirements.txt  validate_data.py
docs/: DEEP_DIVE.md  PROJECT_SUMMARY.md
src/: __init__.py  find_uncategorized.py  relabel_dataset.py  resume_parser.py  skill_synth_data_gen.py  taxonomy_mapper.py  train_gliner_resume.py
src/training_data/: it_training_data.jsonl
tests/: test_resume_parser.py  test_taxonomy_mapper.py
